<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAEDED"
    android:padding="24dp">

    <TextView
        android:id="@+id/profileTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="Create Account"
        android:textColor="#000000"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/userName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:background="#FFFFFF"
        android:hint="Full Name"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/profileTitle" />

    <EditText
        android:id="@+id/userEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="#FFFFFF"
        android:hint="Email Address"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/userName" />

    <EditText
        android:id="@+id/userPhone"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="#FFFFFF"
        android:hint="Phone (Optional)"
        android:inputType="phone"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/userEmail" />

    <LinearLayout
        android:id="@+id/roleBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/userPhone">

        <Button
            android:id="@+id/btnRoleOrganizer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Organizer"
            android:layout_marginEnd="4dp"
            android:backgroundTint="#E5B35C"/>

        <Button
            android:id="@+id/btnRoleEntrant"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Entrant"
            android:layout_marginStart="4dp"
            android:backgroundTint="#E5B35C"/>

        <Button
            android:id="@+id/btnRoleAdmin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Admin"
            android:layout_marginEnd="4dp"
            android:backgroundTint="#E5B35C"/>
    </LinearLayout>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#3B71F3"
        android:text="Log In"
        android:textColor="#FFFFFF"
        app:layout_constraintTop_toBottomOf="@id/roleBox" />
</androidx.constraintlayout.widget.ConstraintLayout>